--- a/index.html
+++ b/index.html
@@ -37,7 +37,69 @@
             </ul>
         </nav>
     </header>
-
+    <section id="'banner"></section>
+    <section id="news">
+        <header>
+            <h2>NEWS</h2>
+            <h3>最新消息</h3>
+        </header>
+    </section>
+    <section id="service">
+        <header>
+            <h2>SERVICE</h2>
+            <h3>服務項目</h3>
+        </header>
+        <div class="box__list">
+            <article class="item">
+                <!-- a>(figure>img)+div>.content>h1+P -->
+                <a href="#">
+                    <figure><img src="./images/pt_news1.jpg" alt=""></figure>
+                    <div>
+                        <div class="content">
+                            <h1>NEWS TITLE</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
+                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
+                                ducimus labore neque dolore accusamus.</p>
+                        </div>
+                    </div>
+                </a>
+            </article>
+            <article class="item"><a href="#">
+                    <figure><img src="./images/pt_news2.jpg" alt=""></figure>
+                    <div>
+                        <div class="content">
+                            <h1>NEWS TITLE</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
+                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
+                                ducimus labore neque dolore accusamus.</p>
+                        </div>
+                    </div>
+                </a></article>
+            <article class="item"><a href="#">
+                    <figure><img src="./images/pt_news3.jpg" alt=""></figure>
+                    <div>
+                        <div class="content">
+                            <h1>NEWS TITLE</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
+                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
+                                ducimus labore neque dolore accusamus.</p>
+                        </div>
+                    </div>
+                </a></article>
+        </div>
+    </section>
+    <section id="video">
+        <header>
+            <h2>VIDEO</h2>
+            <h3>相關影片</h3>
+        </header>
+    </section>
+    <section id="about">
+        <header>
+            <h2>ABOUT</h2>
+            <h3>關於我們</h3>
+        </header>
+    </section>
     <main>
         <section id="content">
             <header class="title">
@@ -63,6 +125,9 @@
                     <span>送出</span>
                 </button>
             </form>
+            <!-- 設定裝飾花 -->
+            <div class="flower_r"><img src="./images/flower_r.png" alt="裝飾紅花"></div>
+            <div class="flower_w"><img src="./images/flower_w.png" alt="裝飾白花"></div>
         </section>
     </main>
     <footer></footer>
