--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
             <h2>NEWS</h2>
             <h3>最新消息</h3>
         </header>
-    </section>
-    <section id="service">
-        <header>
-            <h2>SERVICE</h2>
-            <h3>服務項目</h3>
-        </header>
         <div class="box__list">
             <article class="item">
                 <!-- a>(figure>img)+div>.content>h1+P -->
@@ -57,9 +51,11 @@
                     <div>
                         <div class="content">
                             <h1>NEWS TITLE</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
-                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
-                                ducimus labore neque dolore accusamus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, omnis! Molestiae
+                                voluptatem earum ipsum aliquid magnam odio assumenda, dicta doloremque eligendi eaque
+                                pariatur autem ratione sunt ad tempora nihil debitis hic sint ipsam cum voluptatibus!
+                                Nemo voluptate laboriosam adipisci exercitationem sunt eaque sed, sit repellat totam
+                                maiores. Cum, iste voluptatem!</p>
                         </div>
                     </div>
                 </a>
@@ -88,8 +84,45 @@
                 </a></article>
         </div>
     </section>
+    <!-- 服務項目 -->
+    <section id="service">
+        <!-- 標題區 -->
+        <header>
+            <h2>SERVICE</h2>
+            <h3>服務項目</h3>
+        </header>
+        <!-- 列表區 -->
+        <!-- li.box__list.item*4>a[herf='#']>h1{SERVICE TITLE}+p -->
+        <ul class="box__list">
+            <li class="item svc-1">
+                <a href="" class="content">
+                    <h1>SERVICE TITLE</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe culpa eveniet incidunt at nostrum, aperiam cupiditate officia nobis qui numquam deserunt tenetur. Doloribus animi voluptates ipsa ut? Quisquam praesentium illum rem cumque deserunt voluptate necessitatibus nulla voluptatibus, magnam temporibus harum, vitae ipsam nam placeat, repudiandae officiis qui iste ea! Reprehenderit?</p>
+                </a>
+            </li>
+            <li class="item svc-2">
+                <a href="" class="content">
+                    <h1>SERVICE TITLE</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe culpa eveniet incidunt at nostrum, aperiam cupiditate officia nobis qui numquam deserunt tenetur. Doloribus animi voluptates ipsa ut? Quisquam praesentium illum rem cumque deserunt voluptate necessitatibus nulla voluptatibus, magnam temporibus harum, vitae ipsam nam placeat, repudiandae officiis qui iste ea! Reprehenderit?</p>
+                </a>
+            </li>
+            <li class="item svc-3">
+                <a href="" class="content">
+                    <h1>SERVICE TITLE</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe culpa eveniet incidunt at nostrum, aperiam cupiditate officia nobis qui numquam deserunt tenetur. Doloribus animi voluptates ipsa ut? Quisquam praesentium illum rem cumque deserunt voluptate necessitatibus nulla voluptatibus, magnam temporibus harum, vitae ipsam nam placeat, repudiandae officiis qui iste ea! Reprehenderit?</p>
+                </a>
+            </li>
+            <li class="item svc-4">
+                <a href="" class="content">
+                    <h1>SERVICE TITLE</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe culpa eveniet incidunt at nostrum, aperiam cupiditate officia nobis qui numquam deserunt tenetur. Doloribus animi voluptates ipsa ut? Quisquam praesentium illum rem cumque deserunt voluptate necessitatibus nulla voluptatibus, magnam temporibus harum, vitae ipsam nam placeat, repudiandae officiis qui iste ea! Reprehenderit?</p>
+                </a>
+            </li>
+        </ul>
+    </section>
     <section id="video">
         <header>
+
             <h2>VIDEO</h2>
             <h3>相關影片</h3>
         </header>
@@ -101,7 +134,7 @@
         </header>
     </section>
     <main>
-        <section id="content">
+        <s id="content">
             <header class="title">
                 <h2>CONTACT US</h2>
                 <h3>聯絡我們</h3>
@@ -128,7 +161,7 @@
             <!-- 設定裝飾花 -->
             <div class="flower_r"><img src="./images/flower_r.png" alt="裝飾紅花"></div>
             <div class="flower_w"><img src="./images/flower_w.png" alt="裝飾白花"></div>
-        </section>
+        </s>ection
     </main>
     <footer></footer>
 </body>
