--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <section id="'banner"></section>
-    <section id="news">
+    <section id="new">
         <header>
             <h2>NEWS</h2>
             <h3>最新消息</h3>
@@ -65,9 +65,7 @@
                     <div>
                         <div class="content">
                             <h1>NEWS TITLE</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
-                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
-                                ducimus labore neque dolore accusamus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero omnis similique dicta animi hic doloribus nam minus ex dignissimos. Consequuntur dolorem sequi quos sit suscipit quasi dolor hic tempora nostrum. At, officiis accusamus consectetur tempora dicta blanditiis non explicabo, quaerat dolor natus odio minus aperiam culpa in! Ut repellendus dolore labore consequuntur, voluptatibus vitae placeat, minus dolores iste enim ullam ea, atque omnis nemo nam! Aperiam quod eveniet odit illum?</p>
                         </div>
                     </div>
                 </a></article>
@@ -76,9 +74,7 @@
                     <div>
                         <div class="content">
                             <h1>NEWS TITLE</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima reiciendis quos
-                                assumenda sed, ullam possimus labore illo, nesciunt, id expedita ex! Sed rem aperiam
-                                ducimus labore neque dolore accusamus.</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam officia saepe ipsa placeat nihil aliquid, fugiat deserunt amet architecto neque unde id ratione. Aspernatur dolore provident id quas natus! Nostrum omnis adipisci voluptatibus accusantium molestiae aperiam ab id eveniet? Ipsum soluta voluptatem maiores placeat fugiat animi aperiam molestiae quae. Adipisci, reprehenderit. Quo magnam est aperiam, veniam assumenda voluptatibus, ratione earum repellendus vel asperiores debitis ut odit nam nemo repudiandae exercitationem.</p>
                         </div>
                     </div>
                 </a></article>
@@ -126,15 +122,24 @@
             <h2>VIDEO</h2>
             <h3>相關影片</h3>
         </header>
+        <div class="video"><!-- 影片的外框 -->
+            <video src="./images/Planter.mp4" poster="./images/cover.jpg" controls ></video><!-- 影片的連結 -->
+            <!-- 瀏覽去設定autoplay必須搭配muted才能使用 -->
+        </div>
     </section>
     <section id="about">
+
+<div class="content">
+
         <header>
             <h2>ABOUT</h2>
             <h3>關於我們</h3>
         </header>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis aliquam totam consequatur neque, autem minus facilis facere quibusdam explicabo aut? Doloribus rem dolor quidem fuga corrupti totam non cumque repellat, amet, provident iusto! Neque, illum voluptates. Placeat alias ad nam, sapiente aliquam dicta, dolor quibusdam atque saepe cum animi consectetur aspernatur quidem delectus non doloribus natus voluptatum tempora voluptate recusandae asperiores doloremque rem nemo? Fugit atque libero possimus soluta quidem laudantium itaque excepturi ipsa perspiciatis, quo culpa iure, tenetur alias dolorem omnis consectetur et? Excepturi nobis animi dolorem totam voluptates sit beatae commodi. Ipsam accusantium, excepturi possimus officiis vitae molestiae sint et, ad optio sequi explicabo nihil cum ex ab veniam dignissimos corporis laborum delectus commodi earum eos sapiente. Blanditiis voluptate at vero error enim, consectetur quos autem delectus, iure id perspiciatis molestiae ipsa ea optio doloribus nihil in sunt repellendus consequuntur libero distinctio fugit exercitationem expedita unde. Esse et quisquam ducimus aperiam earum vitae atque, animi enim consequuntur ad expedita cum error repudiandae id. Quisquam, quia molestiae consequuntur expedita aut alias. Accusantium deserunt excepturi voluptates eius a iusto dignissimos, inventore consequuntur, possimus reiciendis nam ex odit, aliquid consectetur? Voluptate ut dolor, doloremque adipisci illo fugiat soluta! Corporis beatae autem quae eum molestias vitae dolorem libero aperiam, perferendis sapiente maxime quia porro laborum cumque et. Repellendus provident natus corporis, cupiditate aperiam nesciunt, dolorem, accusantium officiis aspernatur modi quis voluptatum consectetur aliquid maxime ipsa eligendi! Repudiandae quidem esse totam voluptatibus a non perspiciatis dignissimos odit culpa. Aperiam hic architecto voluptates earum ea cumque quam aut ad quod, facilis molestiae, itaque voluptatem voluptate natus? In vitae aliquid delectus quae eveniet tempore consequatur impedit eligendi quidem ex expedita pariatur nobis dolor iusto provident dolorum cum voluptates, saepe similique perferendis itaque nostrum praesentium molestiae corporis. Facere sint debitis voluptatibus ipsa voluptatem repudiandae necessitatibus nemo recusandae sunt natus similique, explicabo consequatur delectus enim quidem vel officia maxime culpa minima! Dicta, facere! Neque facere eum eligendi non nulla, aut vitae facilis nemo nisi sed officia tenetur rerum animi adipisci repellendus provident laboriosam soluta maiores quidem esse! Voluptatem, esse cumque. Magnam distinctio consequatur aspernatur quia quas a aliquam fuga totam quos voluptas odio, dignissimos magni placeat cumque. Nemo alias soluta totam recusandae veniam aspernatur cum numquam quam molestias consequuntur, assumenda corrupti obcaecati ipsa officia dolorum? Veritatis error magni, ea expedita tempora veniam tenetur exercitationem deserunt! Mollitia ex repellat voluptate consequuntur at obcaecati pariatur. Architecto tempora magni possimus minus sint odit hic doloremque labore, quos voluptatem amet, nihil eos eligendi dicta, pariatur ipsam repellat molestiae. Sapiente hic sint ad eius labore explicabo provident, sit ea repudiandae est atque, repellendus perferendis voluptates aut optio magni cumque ipsum soluta doloremque illum corrupti quae ex quia? Fuga, esse! Facere laborum enim et alias modi at delectus esse corrupti voluptates, sequi nostrum provident, eos id distinctio, fugiat debitis. Praesentium, expedita. Maiores debitis asperiores totam excepturi. Atque, omnis minus nesciunt voluptatem aut dolores, placeat nemo obcaecati debitis eos commodi enim aspernatur qui quo repellat ut, sapiente voluptate dolorum nulla alias iure? Itaque, ipsum mollitia deserunt repudiandae ratione suscipit velit nemo natus obcaecati, placeat consequuntur, deleniti sequi consequatur sed quaerat reprehenderit quis. Nihil atque quisquam, eaque explicabo pariatur sunt quasi distinctio omnis ipsam, nulla earum, provident officia minima at iure deleniti dolores amet possimus neque sed vero ipsa illum vel? Optio reiciendis eveniet id assumenda repellat voluptates quasi dignissimos blanditiis fugiat. Necessitatibus animi eos cum sequi non aliquam. Rem, dolores eius odio error debitis aliquid modi ea deleniti nulla iusto repellat. Esse error dolorum, consequatur amet vitae ipsum cumque ullam tempore aspernatur laborum, eaque harum non repellat. Vero ad, saepe non minus perferendis molestiae. Amet sed iusto rerum maiores minima omnis, minus voluptates deleniti voluptas vero impedit atque reiciendis eveniet possimus quas itaque culpa! Consequuntur a maxime doloribus, laborum assumenda nesciunt mollitia libero ratione perspiciatis alias, fugit aut, eius dicta. Quibusdam dolorem sed debitis, at adipisci sint iure repudiandae quasi id veritatis atque, esse aperiam, laborum obcaecati et quis deleniti odit eum. Molestias vitae, et fugiat nulla amet labore ut facere veniam distinctio quia eveniet eius nostrum! Pariatur, ex placeat sit officiis quam nihil ipsum doloribus. Perferendis quis quae, doloremque recusandae ut ab tempora praesentium at modi ratione, mollitia ex eum beatae blanditiis. Recusandae, odit itaque quidem consequuntur delectus repellendus ipsam praesentium atque repellat possimus soluta nemo, saepe necessitatibus. Amet, maxime! Rerum pariatur cumque provident, non in eos dignissimos quos enim assumenda laudantium adipisci sapiente consequatur illum quas, blanditiis nam labore? Commodi architecto quae corrupti totam facilis fuga nam? Sed harum perspiciatis possimus necessitatibus placeat! Maiores exercitationem aspernatur alias voluptatum quam recusandae, deserunt quis, vero iste reiciendis nam amet nobis tempora hic nemo facere in ab consequatur aperiam voluptate unde dicta distinctio aliquam tenetur! Non impedit explicabo dolor iste iusto consequatur alias rerum voluptates eligendi nisi quam eos distinctio temporibus maiores velit, nobis neque quasi necessitatibus odit facere ex ducimus, obcaecati, nostrum eaque? Accusamus nobis rem, culpa modi deserunt laudantium ex neque similique consectetur placeat, temporibus aliquam perferendis nesciunt repellendus distinctio quaerat! Libero cumque ipsam maxime aperiam iure rerum placeat aspernatur eius aut ratione. Neque voluptates adipisci earum pariatur libero illo repellendus tempore natus, placeat at aperiam beatae quo. Tempora eius numquam ipsum nam architecto veritatis provident dolor voluptate perspiciatis culpa dignissimos quo, delectus, voluptas omnis reprehenderit harum atque laborum magni aperiam! Dicta neque modi voluptates cumque itaque est quaerat, soluta dolorem debitis! Dolorum non assumenda aspernatur odio eos quia ex expedita exercitationem soluta veritatis optio, repellendus dolore a. Adipisci rem possimus, alias nobis similique, repudiandae in animi error voluptas quod quaerat sint quidem consequuntur. Aliquam possimus omnis odio. Unde nemo necessitatibus cum quia quis reprehenderit dolorem laboriosam tempore! Quo dignissimos ipsa eaque pariatur ducimus accusantium veritatis aliquid possimus repellat repudiandae vero quia accusamus, consequuntur aspernatur ea officia ex? Necessitatibus tempore atque ipsum enim cumque at? Repellat magni esse repudiandae, provident iure quidem accusantium magnam repellendus expedita tempore, amet deleniti optio placeat consequatur pariatur. Blanditiis repudiandae recusandae, molestiae beatae hic, tenetur ad temporibus, officia ipsam fugit cum aliquid. Aliquid corrupti laboriosam obcaecati nostrum minus?</p>
+    </div>
     </section>
     <main>
-        <s id="content">
+        <section id="content">
             <header class="title">
                 <h2>CONTACT US</h2>
                 <h3>聯絡我們</h3>
@@ -161,7 +166,7 @@
             <!-- 設定裝飾花 -->
             <div class="flower_r"><img src="./images/flower_r.png" alt="裝飾紅花"></div>
             <div class="flower_w"><img src="./images/flower_w.png" alt="裝飾白花"></div>
-        </s>ection
+        </section>
     </main>
     <footer></footer>
 </body>
