--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <div class="banner-inner-wrapper">
                             <h2>Creative Template</h2>
                             <h1>Welcome<br>to MoGo</h1>
-                            <div class="line"></div>
-                            <div class="learn-more-button"><a href="#section-2">Learn More</a></div>
+                            <!-- <div class="line"></div> -->
+                            <!-- <div class="learn-more-button"><a href="#section-2">Learn More</a></div> -->
                         </div>
                     </div>
                     <!-- 第二張 -->
@@ -415,7 +415,61 @@
             <div class="flower_w"><img src="./images/flower_w.png" alt="裝飾白花"></div>
         </section>
     </main>
-    <footer></footer>
+    <!-- 頁尾區 -->
+    <footer>
+        <div>
+            <h1 class="logo"><a href="index.html"><img src="./images/logo_b.svg" alt=""></a></h1>
+            <!-- 主選單 -->
+            <nav class="navihation">
+                <ul class="menu">
+                    <li><a href="#">HOME</a></li>
+                    <li>
+                        <!-- 主按鈕 -->
+                        <a href="#">NEWS</a>
+                        <!-- 子選單 -->
+                        <ul class="submenu">
+                            <li><a href="#">媒體報導</a></li>
+                            <li><a href="#">活動訊息</a></li>
+                        </ul>
+                    </li>
+                    <!-- <li><a href="#">NEWS</a></li> -->
+
+                    <li>
+                        <!-- 主按鈕 -->
+                        <a href="#">SERVICE</a>
+                        <!-- 子選單 -->
+                        <ul class="submenu">
+                            <li><a href="#">服務1</a></li>
+                            <li><a href="#">服務2</a></li>
+                            <li><a href="#">服務3</a></li>
+                            <li><a href="#">服務4</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="#">VIDEO</a></li>
+                    <li>
+                        <!-- 主按鈕 -->
+                        <a href="#">ABOUT</a>
+                        <!-- 子選單 -->
+                        <ul class="submenu">
+                            <li><a href="#">總經理的話</a></li>
+                            <li><a href="#">公司歷史</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <!-- 主按鈕 -->
+                        <a href="#">CONTACT</a>
+                        <!-- 子選單 -->
+                        <ul class="submenu">
+                            <li><a href="#">聯絡方式</a></li>
+                            <li><a href="#">交通路線</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <small>copyright &copy; 個人網站-html5web</small>
+    </footer>
 
     <!-- 先載入套件給的JQuery原始碼  好讓瀏覽器看得懂  -->
     <!-- JQuery原始碼，只能選一個版本套論，不可以重複使用 -->
