--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
                     <li><a class="icon-fb" href="#"></a></li>
                     <li><a class="icon-ig" href="#"></a></li>
                     <li><a class="icon-line" href="#"></a></li>
-                    <li><a class="but-login" href="login.html#">Login</a></li>
+                    <!-- <li><a class="but-login" href="login.html#">Login</a></li> -->
                 </ul>
                 <!-- main btn |  ul.menu>li*6>a-->
                 <ul class="menu">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">NEWS</a></li>
-                    <li><a href="#">SERVICE</a></li>
-                    <li><a href="#">VIDEO</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#banner">HOME</a></li>
+                    <li><a href="#new">NEWS</a></li>
+                    <li><a href="#service">SERVICE</a></li>
+                    <li><a href="#video">VIDEO</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#content">CONTACT</a></li>
+                    <li><a href="page.html#page">PAGE</a></li>
                 </ul>
             </div>
         </nav>
@@ -480,6 +481,7 @@
             </nav>
         </div>
         <small>copyright &copy; 個人網站-html5web</small>
+        <div id="gotop"><img src="./images/arrow-up.svg" alt=""></div>
     </footer>
 
     <!-- 先載入套件給的JQuery原始碼  好讓瀏覽器看得懂  -->
